--- a/package.json
+++ b/package.json
@@ -1,21 +1,101 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "name": "contentful-parent-to-child",
+  "private": false,
+  "description": "A recreation of content update issues with Gatsby/Contentful",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Joel Wakefield",
   "dependencies": {
+    "@apollo/client": "^3.7.12",
+    "@azure/cosmos": "^3.17.3",
+    "@azure/msal-node": "^1.17.1",
+    "@contentful/rich-text-types": "^16.0.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@loadable/component": "^5.15.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@mui/system": "^5.12.1",
+    "@mui/utils": "^5.12.0",
+    "@mui/x-data-grid": "^6.2.1",
+    "@react-shanties/core": "^0.0.11",
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.3.6",
+    "classnames": "^2.3.2",
+    "css-mediaquery": "^0.1.2",
+    "date-fns": "^2.29.3",
+    "dompurify": "^3.0.2",
+    "dotenv": "^16.0.3",
+    "dynamics-web-api": "^1.7.8",
     "gatsby": "^5.9.0",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-cli": "^5.9.0",
+    "gatsby-link": "^5.9.0",
+    "gatsby-plugin-csp-nonce": "^1.2.0",
+    "gatsby-plugin-gatsby-cloud": "^5.9.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-plugin-styled-components": "^6.9.0",
+    "gatsby-remark-prismjs": "^7.9.0",
+    "gatsby-source-contentful": "^8.9.1",
     "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
+    "gbimage-bridge": "^0.2.2",
+    "graphql-ws": "^5.12.1",
+    "lodash": "^4.17.21",
+    "node": "^19.8.1",
+    "patch-package": "^6.5.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "rehype-dom-parse": "^4.0.2",
+    "rehype-parse": "^8.0.4",
+    "rehype-react": "^7.2.0",
+    "rehype-rewrite": "^3.0.6",
+    "sass": "^1.62.0",
+    "stream": "^0.0.2",
+    "string_decoder": "^1.3.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
-    "prettier": "^2.8.7"
+    "@parcel/namer-default": "^2.8.3",
+    "@react-ddd/eslint-config": "^0.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/css-mediaquery": "^0.1.1",
+    "@types/dompurify": "^3.0.2",
+    "@types/jest": "^29.5.1",
+    "@types/loadable__component": "^5.13.4",
+    "@types/node": "^18.16.0",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gatsby-plugin-schema-snapshot": "^4.9.0",
+    "gatsby-plugin-tsconfig-paths": "^1.0.6",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-gwt": "^3.1.1",
+    "jest-mock": "^29.5.0",
+    "react-masonry-css": "^1.0.16",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "keywords": [
     "gatsby"
@@ -23,18 +103,12 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "lint": "eslint *.js *.ts *.tsx ./src",
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   }
 }
